# llmgate

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
llmgate/: __init__.py  classifier.py  cli.py  config.py  dispatcher.py  guardrails.py  ledger.py  llmgate.py  models.py  resolver.py  stats.py
llmgate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_classifier.py  test_dispatcher.py  test_ledger.py  test_resolver.py
